New line added by github

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 		<p>Again master has added a paragraph</p>
 
 		<p>this another line coming from branch1</p>
+		
+		<p>This line is added under github</p>
 
 	</body>
 </html>
